Fixed 404 message not centered

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -304,6 +304,7 @@ p {
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 /* Breakpoints */
